--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- Right Content -->
             <div class="content-right">
                 <div class="image-container">
-                    <img src="img.png" alt="sectionImage" class="section-image">
+                    <img src="usgs-hoS3dzgpHzw-unsplash.jpg" alt="sectionImage" class="section-image">
                 </div>
 
             </div>
@@ -238,6 +238,66 @@
         </div>
 
 
+    </div>
+
+
+    <!-- Testimonial Container -->
+
+    <div class="testimonial-container">
+            <div class="testimonial-content">
+                <h2 class="testimonial-title">
+                        What Others Say About Us
+                </h2>
+                <div class="testimonial-grid">
+                    <!-- card 1 -->
+
+                        <div class="testimonial-card">
+
+                                <div class="testimonial-text"> "StudySync revolutionized my classroom engaging content and teacher resources make learning enjoyable. Highly recommended for educators."</div>
+
+                                <div class="testimonial-avatar">
+                                    <img src="avatar1.png" alt="">
+                                </div>
+
+                                <div class="testimonial-details">
+                                    <h3 class="testimonial-name">Sarah Johnson</h3>
+                                    <p class="testimonial-desc">8th Grade English Teacher </p>
+                                </div>
+                        </div>
+
+                    <!-- card 2 -->
+                        <div class="testimonial-card">
+
+                                    <div class="testimonial-text"> "StudySync transformed our family's learning journey. Safe, interactive, and progress tracking features are invaluable for parents."</div>
+
+                                    <div class="testimonial-avatar">
+                                        <img src="avatar2.png" alt="">
+                                    </div>
+
+                                    <div class="testimonial-details">
+                                        <h3 class="testimonial-name">Mark Davis</h3>
+                                        <p class="testimonial-desc">Parent</p>
+                                    </div>
+                        </div>
+
+
+
+                    <!-- card 3 -->
+                        <div class="testimonial-card">
+
+                                <div class="testimonial-text"> "StudySync, a true game-changer! Flexible content, tailored assessments, and excellent support. Integral to our school's district's success."</div>
+
+                                <div class="testimonial-avatar">
+                                    <img src="avatar3.png" alt="">
+                                </div>
+
+                                <div class="testimonial-details">
+                                    <h3 class="testimonial-name">Dr. James Carter</h3>
+                                    <p class="testimonial-desc">School Administrator </p>
+                                </div>
+                        </div>
+                </div>
+            </div>
     </div>
 
 
