Adding NewsLetter Section

--- a/index.html
+++ b/index.html
@@ -301,6 +301,46 @@
     </div>
 
 
+    <!-- Newletter Section -->
+
+    <div class="newsletter-container">
+
+        <div class="newsletter-content">
+                <!-- left-part -->
+                 <div class="news-left">
+                    <img src="img.png" alt="news-img" loading="lazy">
+
+                 </div>
+
+
+                <!-- right-part -->
+                 <div class="news-right">
+                    <div class="news-info">
+                        <h2 class="news-title">Get the latest updates</h2>
+                        <p class="news-description"> Sign up for our newsletter</p>
+                    </div>
+
+                    <form class="news-form">
+
+                            <input type="email" placeholder="Email" class="news-email">
+
+                            <button type="submit"  class="news-button">Send</button>
+                    </form>
+
+                    <div class="news-policy">
+                        By Signing up to our newsletter you agree to our
+                        <a  href="#" class="news-link">Terms of service</a> and
+                        <a href="#" class="news-link">Privacy policy</a>
+                    </div>
+
+                 </div>
+
+
+
+        </div>
+    </div>
+
+
 
 
     
